MDEV-34849 rewrite queue_connect_share even in the same transaction reusing the conn